@@ -151,6 +151,7 @@ vbm.extopts.ignoreErrors = 1;     % catching preprocessing errors: 1 - catch err
 %vbm.extopts.QAcleanup    = 1;     % NOT IMPLEMENTED % move images with questionable or bad quality (see QAcleanupth) to subdirectories
 %vbm.extopts.QAcleanupth  = [3 5]; % NOT IMPLEMENTED % mark threshold for questionable and bad quality for QAcleanup
 
+vbm.extopts.gui           = 1;     % use GUI 
 
 % expert options - ROIs
 %=======================================================================
